// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> matches snapshot in responsive view 1`] = `
<div>
  <div
    class="css-1vskcel-container-container"
  >
    <button
      class="solid css-1030g3v-baseButton-baseButton-solidButton-solidButton-outlineButton-outlineButton-ghostButton-ghostButton-linkButton-linkButton-iconBeforeButton-iconBeforeButton-iconAfterButton-iconAfterButton-btnContainer-btnContainer"
      id="mobile-pagination"
      name="Previous page"
    >
      <span
        class="btn-text"
      >
        <svg-file-stub
          data-testid="arrow-left"
          height="24"
        />
      </span>
    </button>
    <div>
      Page
    </div>
    <div
      class="current-page"
    >
      <div
        class="valid css-1y8897s-inputContainerBaseStyles-inputContainerBaseStyles-inputBaseStyles-inputBaseStyles-selectContainer-selectContainer"
      >
        <div
          class="select-input-wrapper"
        >
          <select
            data-testid="pagination-page"
            id="pagination-page"
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
          </select>
          <span
            class="carret-wrapper"
          >
            <svg-file-stub
              height="24"
            />
          </span>
        </div>
      </div>
    </div>
    <div
      class="total-pages"
    >
      of 
      4
    </div>
    <button
      class="solid css-1030g3v-baseButton-baseButton-solidButton-solidButton-outlineButton-outlineButton-ghostButton-ghostButton-linkButton-linkButton-iconBeforeButton-iconBeforeButton-iconAfterButton-iconAfterButton-btnContainer-btnContainer"
      id="mobile-pagination"
      name="Next page"
    >
      <span
        class="btn-text"
      >
        <svg-file-stub
          data-testid="arrow-right"
          height="24"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`<Pagination /> matches snapshot with on page 1`] = `
<div>
  <div
    class="css-1vskcel-container-container"
  >
    <button
      class="previous-page-btn solid css-15pgdlr-baseButton-baseButton-solidButton-solidButton-outlineButton-outlineButton-ghostButton-ghostButton-linkButton-linkButton-iconBeforeButton-iconBeforeButton-iconAfterButton-iconAfterButton-btnContainer-btnContainer"
      data-testid="previous-page-btn"
      name="Previous page"
    >
      <span
        class="btn-text"
      >
        Previous
      </span>
    </button>
    <div>
      Page
    </div>
    <div
      class="current-page"
    >
      <div
        class="valid css-1y8897s-inputContainerBaseStyles-inputContainerBaseStyles-inputBaseStyles-inputBaseStyles-selectContainer-selectContainer"
      >
        <div
          class="select-input-wrapper"
        >
          <select
            data-testid="pagination-page"
            id="pagination-page"
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
          </select>
          <span
            class="carret-wrapper"
          >
            <svg-file-stub
              height="24"
            />
          </span>
        </div>
      </div>
    </div>
    <div
      class="total-pages"
    >
      of 
      4
    </div>
    <button
      class="solid css-15pgdlr-baseButton-baseButton-solidButton-solidButton-outlineButton-outlineButton-ghostButton-ghostButton-linkButton-linkButton-iconBeforeButton-iconBeforeButton-iconAfterButton-iconAfterButton-btnContainer-btnContainer"
      data-testid="next-page-btn"
      name="Next page"
    >
      <span
        class="btn-text"
      >
        Next
      </span>
    </button>
  </div>
</div>
`;
